crates/pg_syntax/tests/snapshots/postgres_regress/numeric_big@26.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "INSERT INTO num_exp_add VALUES (0,1,'85243.39540024977626076239847863600785982737155858270959890014613035727868293618673807776733416230953723818527101593495895350807775607346277892835514324320448949370623441059033804864158715021903312693889518990256881059434042443507529601095150710777634743301398926463888783847290873199395304998050753365215426971278237920063435565949203678024225270616295573678510929020831006146661747271783837653203039829647102027431761129518881525935216608429897041525858540380754759125150233053469999022855035');"
---
InsertStmt@0..534
  Insert@0..6 "INSERT"
  Whitespace@6..7 " "
  Into@7..11 "INTO"
  Whitespace@11..12 " "
  RangeVar@12..23
    Ident@12..23 "num_exp_add"
  Whitespace@23..24 " "
  SelectStmt@24..532
    Values@24..30 "VALUES"
    Whitespace@30..31 " "
    Ascii40@31..32 "("
    List@32..532
      AConst@32..33
        Iconst@32..33 "0"
      Ascii44@33..34 ","
      AConst@34..35
        Iconst@34..35 "1"
      Ascii44@35..36 ","
      AConst@36..532
        Sconst@36..532 "'85243.39540024977626 ..."
  Ascii41@532..533 ")"
  Ascii59@533..534 ";"

